--- a/index.html
+++ b/index.html
@@ -1,45 +1,41 @@
 <!DOCTYPE html>
+<!--Idioma do projeto=lingua portuguesa-->
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus objetivos do ano</title>
+    <!--Título para o Terceiro trimestre-->
+    <title>Redes Sociais</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
-        <div class="conteudo">
-        <div class="botoes">
-            <button class="botao ativo">Cursos na Alura</button>
-            <button class="botao">Criar projetos em Javascript</button>
-            <button class="botao">Criar um portfolio</button>
-            <button class="botao">Atualizar meu currículo</button>
-        </div>
-        <div class="abas-textos">
-            <div class="aba-conteudo ativo">
-                <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                <div class="contador"></div>
-            </div>
-            <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em Javascript</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                <div class="contador"></div>
-            </div>
-            <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                <div class="contador"></div>
-            </div>
-            <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da Alura</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                <div class="contador"></div>
-            </div>
-        </div>
-    </div>
-    </section>
-    <script src="main.js"></script>
+    <!--Vamos dividir conteúdo em três partes: cabeçalho, usando a tag <header>;
+    Conteúdo principal, usando a tag <main>;
+    Rodapé, usando a tag <footer>.
+    O código ficará da seguinte forma:-->
+    <header>
+        <!--No cabeçalho da página, incluiremos um título <h1> chamado Relatório das redes sociais.-->
+        <h1>Relatório das redes sociais</h1><!--h1-Texto grande-->
+        <!--Para isso, utilizaremos a tag <nav>, que cria um menu de navegação-->
+        <nav>
+            <!--E a tag <a>, que cria links de navegação-->
+            <a href="index.html">Mundo</a>
+            <a href="#">Minha escola</a>
+        </nav>
+    </header>
+    <!--Agora, trabalharemos na tag <main>, criando uma estrutura para conseguir posicionar nossos gráficos. Começaremos incluindo nessa tag
+uma classe chamada graficos-section (seção de gráficos).
+Dentro da tag <main>, criaremos uma seção que terá um id graficos-container e uma classe também chamada graficos-conteiner-->
+    <main class="graficos-section">
+        <section id="graficos-container" class="graficos-container">
+        <!--crie os gráficos aqui-->          
+        </section>
+    </main>
+    <!--Por fim, vamos modificar o rodapé.
+    Adiciona-se apenas uma tag de parágrafo (footer) que informa quem está desenvolvendo a página.-->
+    <footer>
+        <p>Desenvolvido por: Digite aqui o seu nome</p>
+    </footer>
+    <script type="module" src="graficos/informacoesGlobais.js"></script>    
 </body>
 </html>
